; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/pcm/extr_pcm_core.c_dispatch_callback.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/pcm/extr_pcm_core.c_dispatch_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_NOREF = common dso_local global i32 0, align 4
@LUA_REGISTRYINDEX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32)* @dispatch_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @dispatch_callback(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %7, align 4
  %10 = load i32, i32* @LUA_NOREF, align 4
  %11 = icmp ne i32 %9, %10
  br i1 %11, label %12, label %24

12:                                               ; preds = %4
  %13 = load i32*, i32** %5, align 8
  %14 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %15 = load i32, i32* %7, align 4
  %16 = call i32 @lua_rawgeti(i32* %13, i32 %14, i32 %15)
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* @LUA_REGISTRYINDEX, align 4
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @lua_rawgeti(i32* %17, i32 %18, i32 %19)
  %21 = load i32*, i32** %5, align 8
  %22 = load i32, i32* %8, align 4
  %23 = call i32 @lua_call(i32* %21, i32 1, i32 %22)
  br label %24

24:                                               ; preds = %12, %4
  ret void
}

declare dso_local i32 @lua_rawgeti(i32*, i32, i32) #1

declare dso_local i32 @lua_call(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
